--- a/package.json
+++ b/package.json
@@ -11,20 +11,17 @@
 	"files": [
 		"dist"
 	],
-	"main": "./dist/htmldiff.umd.cjs",
-	"module": "./dist/htmldiff.js",
+	"main": "./dist/Diff.js",
 	"types": "./dist/Diff.d.ts",
 	"exports": {
 		".": {
-			"import": "./dist/htmldiff.js",
-			"require": "./dist/htmldiff.umd.cjs",
-			"types": "./dist/Diff.d.ts"
+			"types": "./dist/Diff.d.ts",
+			"import": "./dist/Diff.js"
 		}
 	},
 	"scripts": {
-		"dev": "vite src/demo",
-		"typecheck": "tsc --noEmit",
-		"build": "tsc && vite build",
+		"dev": "npx serve .",
+		"build": "tsc",
 		"test": "vitest run",
 		"test:watch": "vitest",
 		"publish": "npm publish --access public"
@@ -32,8 +29,6 @@
 	"devDependencies": {
 		"@types/node": "^20.4.4",
 		"typescript": "^5.1.6",
-		"vite": "^4.4.6",
-		"vite-plugin-dts": "^3.3.1",
 		"vitest": "^4.0.18"
 	}
 }
