--- a/package.json
+++ b/package.json
@@ -20,15 +20,14 @@
 		}
 	},
 	"scripts": {
-		"dev": "npx serve .",
+		"dev": "bunx serve .",
 		"build": "tsc",
-		"test": "vitest run",
-		"test:watch": "vitest",
+		"test": "bun test",
+		"test:watch": "bun test --watch",
 		"publish": "npm publish --access public"
 	},
 	"devDependencies": {
-		"@types/node": "^20.4.4",
-		"typescript": "^5.1.6",
-		"vitest": "^4.0.18"
+		"@types/bun": "^1.3.9",
+		"typescript": "^5.1.6"
 	}
 }
